--- a/lib/toolchain/template/GCC/linkerfile_iec60730.ld.jinja
+++ b/lib/toolchain/template/GCC/linkerfile_iec60730.ld.jinja
@@ -438,6 +438,7 @@ SECTIONS
   .stack_check (NOLOAD):
   {
     . = ALIGN(8);
+    PROVIDE (__stack_check = . );
     *(.stack_bottom)
     *(.stack_bottom*)
     . = ALIGN(8);
